# cr-apk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pypi.yml
src/: consts.py  main.py
src/commands/: __init__.py  deploy.py  list.py  pull.py
src/lib/apk/: build.py  manifest.py
src/lib/memu/: __init__.py
